# Algoritms

./: .gitignore
01_Arrays/: CMakeLists.txt  README.MD  cpp.hint
01_Arrays/src/homework/ArrayMax/: array_max.cc  array_max.h  array_max_tests.cc
01_Arrays/src/homework/ArrayTop/: TopX.cpp  TopX.h  TopXTests.cpp
01_Arrays/src/homework/UniqueNumbers/: ArrayUnique.cpp  ArrayUnique.h  ArrayUniqueTests.cpp
01_Arrays/src/homework/UniqueSorted/: ArraySorted.cpp  ArraySorted.h  ArraySortedTests.cpp
02_BinarySearch/src/BinarySearch/: BinarySearch.cpp  README.MD
02_BinarySearch/src/Duplicates/: README.MD  RandomSort.cpp  SaveChildren.cpp  TextEditor.cpp
02_BinarySearch/src/InsertionPlace/: Doka4.cpp  README.MD  UrbanDictionary.cpp
02_BinarySearch/src/examples/: BinarySearch.cpp  Doka3.cpp  PlayersQueue.cpp  RemoveDuplicates.cpp
03_HashMaps/src/examples/Dynamic/: DynamicArray.cpp  HashMap.cpp
03_HashMaps/src/examples/HashFunctions/: NamesHash.cpp  PhonesHash.cpp
03_HashMaps/src/homework/HashFunctions/: HashFunctions.cpp  README.MD
03_HashMaps/src/homework/HashMapsAreFast/: HashMapsAreFast.cpp  README.MD
03_HashMaps/src/homework/VeryDynamic/: DynamicHashMap.cpp  README.MD  VeryDynamicArray.cpp
04_Standard_Structures/List/: List.cpp  List.h  Main.cpp  README.md
04_Standard_Structures/Stack/: Main.cpp  README.md  Stack.cpp  Stack.h
05_Standard_Structures2/: DLList.cpp  DLList.h  Main.cpp  README.md
06_Sorting/homework/Comparator/: Book.cpp  Book.h  BookComparator.cpp  BookComparator.h  README.MD
06_Sorting/homework/SortAlgorithms/: Animal.h  BubbleSort.h  CountingSort.h  InsertionSort.h  README.MD  SelectionSort.h  SortAlgorithms.cpp  SortAlgorithms.h  SuperArray.h
06_Sorting/test/homework/: BookComparatorTest.cpp  SortTest.cpp
07_Recursion/homework/BacktrackingResursion/: BruteForceRecursion.cpp  BruteForceRecursion.h  BruteForceRecursionTest.cpp  README.MD
07_Recursion/homework/MergeSortRecursion/: ListNode.h  MergeSortRecursion.cpp  MergeSortRecursion.h  MergeSortRecursionTest.cpp  README.MD
07_Recursion/homework/SimpleRecursion/: README.MD  SimpleRecursion.cpp  SimpleRecursion.h  SimpleRecursionTest.cpp
08_QSort/: README.MD  Sorting.cpp  Sorting.h  SortingTest.cpp
09_Greedy/: README.MD  Skillbox-CPP-Task9.sln
09_Greedy/Lib/: Lib.cpp  Lib.h  Lib.vcxproj  Lib.vcxproj.filters  rnd.cpp  rnd.h
09_Greedy/Solution9/: HuffmanCode.cpp  WorkPlanner.cpp
09_Greedy/Task9/: HuffmanCode.cpp  HuffmanCode.h  Task9.cpp  Task9.vcxproj  Task9.vcxproj.filters  TestTask9.cpp  TestTask9.h  WorkPlanner.cpp  WorkPlanner.h
09_Greedy/TestTask9/: HuffmanCode.cpp  TestTask9.cpp  TestTask9.h  TestTask9.vcxproj  TestTask9.vcxproj.filters  WorkPanel.cpp  WorkPlanner.cpp  _HuffmanCode.h  _WorkPlanner.h
10_BinarySearchTree/: README.MD  Skillbox-CPP-Task10.sln
10_BinarySearchTree/Lib/: Lib.cpp  Lib.vcxproj  rnd.cpp
10_BinarySearchTree/Solution10/: BST.cpp  BST.h  Node.h  Receipt.cpp  Receipt.h  Task10.cpp
10_BinarySearchTree/Task10/: BST.cpp  BST.h  Receipt.cpp  Task10.cpp  Task10.vcxproj  Task10.vcxproj.filters  TestTask10.cpp
10_BinarySearchTree/TestTask10/: BST.cpp  TestTask10.cpp  TestTask10.vcxproj  TestTask10.vcxproj.filters  _BST.h
11_Tree/: Node.cpp  Node.h  README.MD  TestNode.cpp  TestNode.h  Tree.cpp  Tree.h  TreeSolution.cpp  TreeSolution.h  TreeTest.cpp  Virus.h
12_Heap/: Heap.cpp  Heap.h  HeapTest.cpp  README.MD  WretchedPriorityQueue.cpp  WretchedPriorityQueue.h  WretchedPriorityQueueTest.cpp
13_BTree/src/homework/BTree/: BTree.cpp  BTree.h  BTreeTest.cpp  Node.cpp  Node.h  README.MD
13_BTree/src/homework/ContactBook/: Contact.h  ContactBook.cpp  ContactBook.h  ContactBookTest.cpp  README.MD
14_Graph/Hash/: Array.cpp  Array.h  ArrayTest.cpp  README.MD
14_Graph/RandomizedAlgorithms/: Matrix.cpp  Matrix.h  MatrixTest.cpp  README.MD
14_Graph/SimpleGraph/: README.MD  SimpleGraph.cpp  SimpleGraph.h  SimpleGraphTest.cpp
15_UnobviousGraphs/: .gitignore  README.MD
15_UnobviousGraphs/src/: Bridges.cpp  Bridges.h  Path.cpp  Path.h
15_UnobviousGraphs/src/test/: BridgesTest  BridgesTest.cpp  PathTest  PathTest.cpp
16_Compress/: CompressWork.cpp  CompressWork.h  CompressWorkTest.cpp  README.MD
17_Bitmask_Interview/src/homework/Bitmask/: Bitmask.cpp  Bitmask.h  BitmaskTest.cpp  README.MD
17_Bitmask_Interview/src/homework/Interview/: Interview.cpp  Interview.h  InterviewTest.cpp  README.MD
18_OtherAlgorithms/Hash/: Hash.cpp  Hash.h  HashTest.cpp  MD5.txt  README.MD
18_OtherAlgorithms/RandomizedAlgorithms/: README.MD  RandomizedAlgorithms.h  RandomizedAlgorithmsTest.cpp
